fix: keep spacings between comments and footer when form is missing
When a user click on Reply, the comment form moves from the bottom to
the answer. So, the padding is no longer set. By moving the padding
to the parent, the issue is fixed.

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -243,6 +243,17 @@
 
 	&__comments {
 		background: cssVar(color-bg-secondary);
+		padding: 0 0 cssVar(spacing-3xl);
+
+		@include media("screen") {
+			@include dimensions("lg") {
+				padding: 0 0 cssVar(spacing-4xl);
+			}
+
+			@include dimensions("xl") {
+				padding: 0 0 cssVar(spacing-5xl);
+			}
+		}
 		position: relative;
 
 		&::before {
@@ -266,20 +277,6 @@
 
 			&__list {
 				margin-top: cssVar(spacing-md) 0;
-			}
-
-			&__form {
-				padding: 0 0 cssVar(spacing-3xl);
-
-				@include media("screen") {
-					@include dimensions("lg") {
-						padding: 0 0 cssVar(spacing-4xl);
-					}
-
-					@include dimensions("xl") {
-						padding: 0 0 cssVar(spacing-5xl);
-					}
-				}
 			}
 		}
 	}
